--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,13 +13,14 @@ jobs:
           go-version: 1.17
 
       - name: Amass - Enumeration
-        uses: fguisso/amass-action@main
+        uses: r00t-life/amass-action@main
         with:
           domains: owasp.org
           brute: true
+          output: amass.txt
 
       - name: GitHub Workflow artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: amass.txt
+          name: amass-result
           path: output/amass.txt
