--- a/.github/workflows/discord-test.yml
+++ b/.github/workflows/discord-test.yml
@@ -4,30 +4,20 @@ on:
     workflow_dispatch:
 
 jobs:
-  amass-scan:
+  build:
+
     runs-on: ubuntu-latest
-    env: 
-      DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.17
-
-      - name: Amass - Enumeration
-        uses: r00t-life/amass-action@main
-        with:
-          domains: owasp.org
-          brute: true
-          output: owasp.txt
-
-      - name: GitHub Workflow artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: amass-result
-          path: owasp.txt
-
-      - name: Discord notification
-        uses: Ilshidur/action-discord@0.3.2
-        with:
-          args: "Action called : {{ GITHUB_ACTION }} OK!"
+    - name: Discord notification
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        DISCORD_USERNAME: OSS 117
+        DISCORD_AVATAR: https://resize.programme-television.ladmedia.fr/r/670,670/img/var/premiere/storage/images/tele-7-jours/news-tv/oss-117-le-caire-nid-d-espions-c8-le-show-de-jean-dujardin-4484285/90175763-1-fre-FR/OSS-117-Le-Caire-nid-d-espions-C8-Le-show-de-Jean-Dujardin.jpg
+      uses: Ilshidur/action-discord@master
+      with:
+        args: 'A new commit has been pushed to Ilshidur/action-discord.'
+    - name: Discord notification
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      uses: Ilshidur/action-discord@master
