--- a/.github/workflows/discord-test.yml
+++ b/.github/workflows/discord-test.yml
@@ -4,14 +4,18 @@ on:
     workflow_dispatch:
 
 jobs:
-    build:
-      name: Build
-      runs-on: ubuntu-latest
-      steps:
-      - uses: actions/checkout@master
-      - name: send custom message with args
-        uses: appleboy/discord-action@master
-        with:
-          webhook_id: ${{ secrets.WEBHOOK_ID }}
-          webhook_token: ${{ secrets.WEBHOOK_TOKEN }}
-          args: The ${{ github.event_name }} event triggered first step.
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Discord notification
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      uses: Ilshidur/action-discord@master
+      with:
+        args: 'A new commit has been pushed to Ilshidur/action-discord.'
+    - name: Discord notification
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      uses: Ilshidur/action-discord@master
