--- a/.github/workflows/discord-test.yml
+++ b/.github/workflows/discord-test.yml
@@ -5,17 +5,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - name: Discord notification
-      env:
-        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-      uses: Ilshidur/action-discord@master
-      with:
-        args: 'A new commit has been pushed to Ilshidur/action-discord.'
-    - name: Discord notification
-      env:
-        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-      uses: Ilshidur/action-discord@master
+      run: echo ${{ secrets.DISCORD_WEBHOOK }}
