--- a/.github/workflows/discord-test.yml
+++ b/.github/workflows/discord-test.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Discord notification
-      run: echo ${{ secrets }}
+      run: echo ${{ secrets.DISCORD_WEBHOOK }}
