--- a/.github/workflows/discord-test.yml
+++ b/.github/workflows/discord-test.yml
@@ -8,4 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Discord notification
-      run: echo ${{ secrets.DISCORD_WEBHOOK }}
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      uses: Ilshidur/action-discord@master
+      with:
+        args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
