--- a/action.yml
+++ b/action.yml
@@ -23,6 +23,10 @@ inputs:
   output:
     description: "Path to the text file containing terminal stdout/stderr"
     required: true
+  
+  ipv4:
+    description: "Show the IPv4 addresses for discovered names"
+    required: false
 
   
 runs:
@@ -38,6 +42,7 @@ runs:
         echo "::group::Setting up Amass parameters"
         ${{ inputs.passive }} && echo "amass-passive=-active" >> $GITHUB_ENV
         ${{ inputs.brute }} && echo "amass-brute=-brute" >> $GITHUB_ENV
+        ${{ inputs.ipv4 }} && echo "amass-ipv4=-ipv4" >> $GITHUB_ENV
         [ ! -z ${{ inputs.domains }} ] && echo "amass-domains=-d ${{ inputs.domains}}" >> $GITHUB_ENV
         [ ! -z ${{ inputs.output }} ] && echo "amass-output=-o ${{ inputs.output}}" >> $GITHUB_ENV
         echo "::endgroup::"
@@ -46,6 +51,7 @@ runs:
         echo "::group::Running Amass..."
         amass enum \
           ${{ env.amass-passive }} \
+          ${{ env.amass-ipv4 }} \
           ${{ env.amass-brute }} \
           ${{ env.amass-domains }} \
           ${{ env.amass-output }}
