--- a/.github/workflows/instacart.com.yml
+++ b/.github/workflows/instacart.com.yml
@@ -4,7 +4,7 @@ on:
     workflow_dispatch:
 
 jobs:
-  instacart.com-scan:
+  instacart-scan:
     runs-on: ubuntu-latest
     timeout-minutes: 3600
     steps:
