--- a/.github/workflows/pingan.yml
+++ b/.github/workflows/pingan.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           domains: pingan.com
           brute: false
-          ipv4: true
+          ipv4: false
           output: amass.txt
 
       - name: GitHub Workflow artifacts
