--- a/.github/workflows/owasp-test.yml
+++ b/.github/workflows/owasp-test.yml
@@ -1,10 +1,10 @@
-name: instacart.com
+name: owasp.org
 
 on:
     workflow_dispatch:
 
 jobs:
-  instacart-scan:
+  owasp-scan:
     runs-on: ubuntu-latest
     timeout-minutes: 3600
     steps:
@@ -16,7 +16,7 @@ jobs:
       - name: Amass - Enumeration
         uses: r00t-life/amass-action@main
         with:
-          domains: instacart.com
+          domains: owasp.org
           brute: true
           ipv4: false
           output: amass.txt
