--- a/.github/workflows/pingan.yml
+++ b/.github/workflows/pingan.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: amass-result
-          path: *.txt
+          path: *
 
       - name: Httpx - Request
         uses: 
