--- a/.github/workflows/pingan.yml
+++ b/.github/workflows/pingan.yml
@@ -12,6 +12,10 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: 1.17
+      
+      - run: |
+          mkdir -p ~/result/amass
+          mkdir -p ~/result/httpx
 
       - name: Amass - Enumeration
         uses: r00t-life/amass-action@main
@@ -20,13 +24,20 @@ jobs:
           brute: false
           ipv4: false
           output: ~/result/amass/amass.txt
-          htx: ~/result/httpx/httpx.txt
+      
+      - name: Httpx - Enumeration
+        run:  |
+          cat ~/result/amass/amass.txt | httpx -o ~/result/httpx/httpx.txt
 
       - name: GitHub Workflow artifacts
         uses: actions/upload-artifact@v2
         with:
           name: amass-result
           path: ~/result/**/*
-
-      - name: Httpx - Request
-        uses: 
+      
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'The project amass enum instacart.com has been done.'
