--- a/.github/workflows/owasp-test.yml
+++ b/.github/workflows/owasp-test.yml
@@ -21,7 +21,7 @@ jobs:
         uses: r00t-life/amass-action@main
         with:
           domains: owasp.org
-          brute: true
+          brute: false
           ipv4: false
           output: ~/result/amass/amass.txt
 
