--- a/.github/workflows/instacart.com.yml
+++ b/.github/workflows/instacart.com.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 3600
     steps:
+      - name: Get current date
+        id: date
+        run:  echo "::set-output name=date::$(date +'%Y-%m-%d')"
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
@@ -25,16 +28,16 @@ jobs:
           domains: instacart.com
           brute: true
           ipv4: false
-          output: ~/result/amass/amass.txt
+          output: ~/result/amass/instacart.com-${{ steps.date.outputs.date }}.txt
       
       - name: Httpx - Enumeration
         run:  |
-          cat ~/result/amass/amass.txt | httpx -o ~/result/httpx/httpx.txt
+          cat ~/result/amass/instacart.com-${{ steps.date.outputs.date }}.txt | httpx -o ~/result/httpx/instacart.com-${{ steps.date.outputs.date }}.txt
 
       - name: GitHub Workflow artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: amass-result
+          name: instacart.com-${{ steps.date.outputs.date }}
           path: ~/result/**/*
 
       - name: Discord notification
