--- a/.github/workflows/pingan.yml
+++ b/.github/workflows/pingan.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 3600
     steps:
+      - name: Get current date
+        id: date
+        run:  echo "::set-output name=date::$(date +'%Y-%m-%d')"
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
@@ -18,6 +21,7 @@ jobs:
       - run: |
           mkdir -p ~/result/amass
           mkdir -p ~/result/httpx
+          
 
       - name: Amass - Enumeration
         uses: r00t-life/amass-action@main
@@ -25,16 +29,16 @@ jobs:
           domains: pingan.com
           brute: false
           ipv4: false
-          output: ~/result/amass/amass.txt
+          output: ~/result/amass/pingan.com-${{ steps.date.outputs.date }}.txt
       
       - name: Httpx - Enumeration
         run:  |
-          cat ~/result/amass/amass.txt | httpx -o ~/result/httpx/httpx.txt
+          cat ~/result/amass/pingan.com-${{ steps.date.outputs.date }}.txt | httpx -o ~/result/httpx/pingan.com-${{ steps.date.outputs.date }}.txt
 
       - name: GitHub Workflow artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: amass-result
+          name: pingan.com-${{ steps.date.outputs.date }}
           path: ~/result/**/*
       
       - name: Discord notification
