--- a/.github/workflows/instacart.tools.yml
+++ b/.github/workflows/instacart.tools.yml
@@ -19,7 +19,6 @@ jobs:
       - run: |
           mkdir -p ~/result/amass
           mkdir -p ~/result/httpx
-          mkdir -p ~/result/dirsearch
 
       - name: Amass - Enumeration
         uses: r00t-life/amass-action@main
@@ -31,12 +30,9 @@ jobs:
       
       - name: Httpx - Enumeration
         run:  |
-          cat ~/result/amass/instacart.tools-${{ steps.date.outputs.date }}.txt | httpx -silent -p 80,443,8080,81,82,83,8443,8888,8000,10443,9200 -o ~/result/httpx/instacart.tools-${{ steps.date.outputs.date }}.txt
+          cat ~/result/amass/instacart.tools-${{ steps.date.outputs.date }}.txt | httpx -title -status-code -tech-detect -follow-redirects
+ -silent -p 80,443,8080,81,82,83,8443,8888,8000,10443,9200 -o ~/result/httpx/instacart.tools-${{ steps.date.outputs.date }}.txt
 
-      - name: dirsearch - Enumeration
-        run:  |
-          /usr/bin/python3 ~/dirsearch/dirsearch.py -l ~/result/httpx/instacart.tools-${{ steps.date.outputs.date }}.txt --random-agent -e all --skip-on-status 404,500,403 -o ~/result/dirsearch/instacart.tools-${{ steps.date.outputs.date }}.txt
-          
       - name: GitHub Workflow artifacts
         uses: actions/upload-artifact@v2
         with:
