--- a/action.yml
+++ b/action.yml
@@ -33,15 +33,10 @@ runs:
   using: "composite"
   steps:
     - run: |
-        echo "::group::Install Amass, Httpx, dirsearch"
+        echo "::group::Install Amass, Httpx"
         [ ! -x /home/runner/go/bin/amass ] && go install -v github.com/OWASP/Amass/v3/...@master
         [ ! -x /home/runner/go/bin/httpx ] && go install -v github.com/projectdiscovery/httpx/cmd/httpx@latest
         echo "/home/runner/go/bin/" >> $GITHUB_PATH
-        echo "::endgroup::"
-        echo "::group::Install dirsearch"
-        sudo apt update
-        sudo apt install python3 git python3-pip -yq
-        sudo /usr/bin/pip3 install dirsearch
         echo "::endgroup::"
         
       shell: bash
