--- a/.github/workflows/etoro.com.yml
+++ b/.github/workflows/etoro.com.yml
@@ -30,8 +30,7 @@ jobs:
       
       - name: Httpx - Enumeration
         run:  |
-          cat ~/result/amass/etoro.com-${{ steps.date.outputs.date }}.txt | httpx -title -status-code -tech-detect -follow-redirects
- -silent -p 80,443,8080,81,82,83,8443,8888,8000,10443,9200 -o ~/result/httpx/etoro.com-${{ steps.date.outputs.date }}.txt
+          cat ~/result/amass/etoro.com-${{ steps.date.outputs.date }}.txt | httpx -title -status-code -tech-detect -follow-redirects -silent -p 80,443,8080,81,82,83,8443,8888,8000,10443,9200 -o ~/result/httpx/etoro.com-${{ steps.date.outputs.date }}.txt
           
       - name: GitHub Workflow artifacts
         uses: actions/upload-artifact@v2
