--- a/.github/workflows/etoro.com.yml
+++ b/.github/workflows/etoro.com.yml
@@ -1,10 +1,12 @@
 name: etoro.com
 
 on:
-    workflow_dispatch:
+    push:
+      branches:
+        - 'main'
 
 jobs:
-  etoro-com-scan:
+  scan:
     runs-on: ubuntu-latest
     timeout-minutes: 3600
     steps:
