--- a/.github/workflows/instacart.tools.yml
+++ b/.github/workflows/instacart.tools.yml
@@ -1,10 +1,12 @@
 name: instacart.tools
 
 on:
-    workflow_dispatch:
+    push:
+      branches:
+        - 'main'
 
 jobs:
-  instacart-tools-scan:
+  scan:
     runs-on: ubuntu-latest
     timeout-minutes: 3600
     steps:
