--- a/.github/workflows/pingan.yml
+++ b/.github/workflows/pingan.yml
@@ -1,10 +1,12 @@
 name: pingan.com
 
 on:
-    workflow_dispatch:
+    push:
+      branches:
+        - 'main'
 
 jobs:
-  pingan-scan:
+  scan:
     runs-on: ubuntu-latest
     timeout-minutes: 3600
     steps:
@@ -44,4 +46,4 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@master
         with:
-          args: 'The project amass enum instacart.com has been done.'
+          args: 'The project amass enum pingan.com has been done.'
