--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
       - name: Get current date
         id: date
-        run:  echo "::set-output name=date::$(date +'%Y-%m-%d')"
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+        run:  echo "{date}={$(date +'%Y-%m-%d')}" >> $GITHUB_OUTPUT
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
         with:
           go-version: 1.17
 
