--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -10,6 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 3600
     steps:
+      - name: Build environemts
+        run: |
+          echo "::group::Install Amass, Httpx"
+          [ ! -x /home/runner/go/bin/amass ] && go install -v github.com/OWASP/Amass/v3/...@master
+          [ ! -x /home/runner/go/bin/httpx ] && go install -v github.com/projectdiscovery/httpx/cmd/httpx@latest
+          echo "/home/runner/go/bin/" >> $GITHUB_PATH
+          echo "::endgroup::"
+        shell: bash
+
       - name: Get current date
         id: date
         run:  echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
@@ -27,11 +36,24 @@ jobs:
       - run: |
           mkdir -p ~/result/amass
           mkdir -p ~/result/httpx
-          echo ${{ env.target }} > ~/result/target.txt
-          echo "${{ steps.date.outputs.date }}"
+
+      - name: Amass - Enumeration
+        run: amass enum -d ${{ env.target }} -o ~/result/amass/${{ env.target }}-${{ steps.date.outputs.date }}.txt
+      
+      - name: Httpx - Enumeration
+        run:  |
+          cat ~/result/amass/${{ env.target }}-${{ steps.date.outputs.date }}.txt | httpx -title -status-code -tech-detect -follow-redirects -silent -p 80,443,8080,81,82,83,8443,8888,8000,10443,9200 -o ~/result/httpx/${{ env.target }}-${{ steps.date.outputs.date }}.txt
+        
 
       - name: GitHub Workflow artifacts
         uses: actions/upload-artifact@v3
         with:
           name: ${{ env.target }}-${{ steps.date.outputs.date }}
           path: ~/result/**/*
+      
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'The project ${{ env.target }} has been done.'
